--- a/docs/spec/refs.bib
+++ b/docs/spec/refs.bib
@@ -209,3 +209,12 @@ pages="266--278",
 abstract="In 1972 J.-Y. Girard showed that the Burali-Forti paradox can be formalised in the type system U. In 1991 Th. Coquand formalised another paradox in U−. The corresponding proof terms (that have no normal form) are large. We present a shorter term of type ⊥ in the Pure Type System $\lambda$U− and analyse its reduction behaviour. The idea is to construct a universe U and two functions such that a certain equality holds. Using this equality, we prove and disprove that a certain object in U is well-founded.",
 isbn="978-3-540-49178-1"
 }
+
+@misc{bidi_typing_youtube,
+  author = {David Christiansen},
+  title = {Bidirectional Type Checking},
+  howpublished = {\url{https://www.youtube.com/watch?v=utyBNDj7s2w}},
+  year = 2019,
+  month = {June},
+  day = 26
+}
