--- a/docs/spec/spec.tex
+++ b/docs/spec/spec.tex
@@ -1928,7 +1928,7 @@ and existentials come with 3 rules, namely
 \end{itemize}
 
 Type formation rules tell us when an expression constructed using a type
-constructor like \texttt{Pi} or \texttt{+} is a well formed type.
+former like \texttt{Pi} or \texttt{+} is a well formed type.
 The introduction and elimination rules give us the typing rules for the data
 constructors and eliminators respectively.
 
